# rustnes

./: Cargo.toml  snake6502.asm
.github/workflows/: release.yml
asm/: snake.asm
src/: cpu.rs  main.rs  ops.rs  util.rs
src/bus/: mod.rs
src/cpu/: adressing_mode.rs  cpu.rs  mod.rs  opcode.rs  ops.rs
src/opcode/: mod.rs
src/ppu/: mod.rs
